--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
     </ol>
 
     <p>Share: <a href="https://twitter.com/">Twitter</a> <a href="https://www.facebook.com/">Facebook</a> <a href="https://www.linkedin.com/">LinkedIn</a></p>
+
+<section id="footer">
+    <hr><footer class="myName">Recreated by <span id="heart">&#9829;</span>Leonidah<span id="heart">&#9829;</span></footer>
+</section>
+
 </body>
 </html>
